# Educational-Rat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Client/: CMakeLists.txt
Client/lib/: ClientNetwork.hpp  FileHandler.hpp  Keylogger.hpp
Client/lib/Malware/: Keylogger.hpp
Client/lib/Networking/: ClientNetwork.hpp
Client/lib/Utils/: Commands.hpp
Client/src/: ClientNetwork.cpp  Commands.cpp  FileHandler.cpp  Keylogger.cpp  main.cpp
Client/src/Malware/: Keylogger.cpp
Client/src/Networking/: ClientNetwork.cpp
Client/src/Utils/: Commands.cpp  FileHandler.cpp
Server/: CMakeLists.txt
Server/lib/: ServerNetwork.hpp
Server/src/: ServerNetwork.cpp  main.cpp
Server/src/Networking/: ServerNetwork.cpp
external scripts/: compile.ps1  run.ps1
